# blockchain-mining-simulator

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: cli_demo.py
src/blockchain_mining_simulator/: __init__.py  chain.py  config.py  gui.py  layout.py  main.py  mining.py  models.py  parsing.py  pow.py  statistics.py  svg.py
tests/: test_parser_and_chain.py
